Don't set death message to null if empty